--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ This will put voltpeek into adjust mode. This is indicated in the command input.
 </p>
 <img src="./adjust_mode.png">
 <p>
-Once in adjust, mode you can use various keys to zoom in vertically or horizontally. To zoom in 
+Once in adjust mode you can use various keys to zoom in vertically or horizontally. To zoom in 
 and out horizontally you can use <code>h</code> and <code>l</code>, respectively. To zoom in and 
 out vertically use <code>j</code> and <code>k</code> respectively. You can do this zooming while
 the auto triggering is active for immediate update. Once you are done zooming, you can use either 
